Add lemon_bar, rhubarb_crisp, and choco_chunk recipes

--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
 </head>
 <body>
     <h1>Odin's Recipes</h1>
+    <p><a href="recipes/choco_chunk_cookie.html">Triple Chocolate Chunk Cookies</a></p>
+    <p><a href="recipes/lemon_bar.html">Lemon Bars</a></p>
+    <p><a href="recipes/rhubarb_crisp.html">Royal Rhubarb Crisp</a></p>
 </body>
 </html>
