Add recipe content

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <p><a href="recipes/choco_chunk_cookie.html">Triple Chocolate Chunk Cookies</a></p>
     <p><a href="recipes/lemon_bar.html">Lemon Bars</a></p>
     <p><a href="recipes/rhubarb_crisp.html">Royal Rhubarb Crisp</a></p>
+
+    <p>The recipes on this website are sourced from allrecipes.</p>
 </body>
 </html>
