--- a/recipes/choco_chunk_cookie.html
+++ b/recipes/choco_chunk_cookie.html
@@ -6,5 +6,14 @@
 </head>
 <body>
     <h1>Triple Chocolate Chunk Cookies</h1>
+    <br> <!-- line break. I want the photo on a new line -->
+    <img src ="img/choco_chunk.jpg" alt="photo of Triple Chocolate Chunk cookies by Yoly">
+    <p>Large or small, these triple chocolate cookies are crispy on the outside and chewy on the inside.
+      Refrigerating the batter for 48 hours before baking is ideal, as this allows the dough to fully form its flavor.
+      <em>- Josh Graham</em></p>
+
+    <h2>Ingredients</h2>
+
+    <h2>Directions</h2>
 </body>
 </html>
