--- a/recipes/lemon_bar.html
+++ b/recipes/lemon_bar.html
@@ -6,5 +6,14 @@
 </head>
 <body>
     <h1>Lemon Bars</h1>
+    <br> <!-- line break. I want the photo on a new line -->
+    <img src ="img/lemon_bar.jpg" alt="photo of Lemon Bar by user Nikoo">
+    <p>This is one of my favorite cookies of all time, although technically they're closer to a pie than a cookie. 
+    Nothing prepares you for that intense, awesome sweet-tart lemon flavor and custard, perfectly contrasted against 
+    that crisp, sweet buttery shortbread cookie. <em>- Chef John, Food Wishes</em></p>
+
+    <h2>Ingredients</h2>
+
+    <h2>Directions</h2>
 </body>
 </html>
