--- a/recipes/rhubarb_crisp.html
+++ b/recipes/rhubarb_crisp.html
@@ -6,5 +6,12 @@
 </head>
 <body>
     <h1>Royal Rhubarb Crisp</h1>
+    <br> <!-- line break. I want the photo on a new line -->
+    <img src ="img/rhubarb_crisp.jpg" alt="Royal Rhubarb Crisp picture by WestCoastMom">
+    <p>If you love rhubarb-strawberry mixtures, you'll love this sweet rhubarb crisp. <em>- Karen Martin</em></p>
+
+    <h2>Ingredients</h2>
+
+    <h2>Directions</h2>
 </body>
 </html>
