Finish recipe steps and ingredients content

--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
 </head>
 <body>
     <h1>Odin's Recipes</h1>
-    <p><a href="recipes/choco_chunk_cookie.html">Triple Chocolate Chunk Cookies</a></p>
-    <p><a href="recipes/lemon_bar.html">Lemon Bars</a></p>
-    <p><a href="recipes/rhubarb_crisp.html">Royal Rhubarb Crisp</a></p>
+    <ul style="list-style: none;">
+        <li><a href="recipes/choco_chunk_cookie.html">Triple Chocolate Chunk Cookies</a></li>
+        <li><a href="recipes/lemon_bar.html">Lemon Bars</a></li>
+        <li><a href="recipes/rhubarb_crisp.html">Royal Rhubarb Crisp</a></li>
+    </ul>
 
     <p>The recipes on this website are sourced from allrecipes.</p>
 </body>
