--- a/recipes/lemon_bar.html
+++ b/recipes/lemon_bar.html
@@ -13,7 +13,49 @@
     that crisp, sweet buttery shortbread cookie. <em>- Chef John, Food Wishes</em></p>
 
     <h2>Ingredients</h2>
+    <h4>Shortbread Crust</h4>
+        <ul>
+            <li>1 cup all-purpose flour</li>
+            <li>1/2 cup unsalted butter, room temperature</li>
+            <li>1/4 cup confectioner's sugar</li>
+            <li>1/4 teaspoon vanilla extract</li>
+            <li>1/4 teaspoon salt</li>
+        </ul>
+    <h4>Lemon Custard</h4>
+        <ul>
+            <li>2 large eggs</li>
+            <li>1 large egg yolk</li>
+            <li>1 cup white sugar</li>
+            <li>2 tablespoons all-purpose flour</li>
+            <li>1/4 cup freshly squeezed lemon juice</li>
+            <li>1 tablespoon freshly grated lemon zest</li>
+            <li>1 teaspoon confectioner's sugar</li>
+        </ul>
 
     <h2>Directions</h2>
+        <ol>
+            <li>Place an oven rack into middle position in oven and preheat oven to 350 degrees F 
+                (175 degrees C). Lightly oil an 8x8-inch baking dish.</li>
+            <li>Place 1 cup flour and butter in a mixing bowl and mash with the back of a spatula 
+                or wooden spoon until thoroughly combined. Mix in 1/4 cup confectioners' sugar, 
+                vanilla extract, and salt; mash mixture together until mixture looks like a 
+                slightly crumbly cookie dough.</li>
+            <li>Moisten your fingers with a little water and press dough into bottom of prepared 
+                baking dish. Use a fork to prick holes all over the crust.</li>
+            <li>Bake crust on center rack in the preheated oven until crust edges are barely 
+                golden brown, 22 minutes.</li>
+            <li>Beat eggs and egg yolks together in a bowl; whisk in white sugar and 2 tablespoons 
+                flour until smooth. Add lemon juice and lemon zest; whisk for 2 minutes. Pour 
+                lemon custard over crust.</li>
+            <li>Bake on center rack until custard is set and top has a thin white sugary crust, 25 
+                minutes. Let cool completely before cutting into bars. Dip knife into very hot water, 
+                run around the edge, and cut into 16 squares. Dust cookies with 1 teaspoon 
+                confectioners' sugar.</li>
+        </ol>
+    <h4>Cook's Note</h4>
+    <p>To add a meringue topping, whisk 1 egg white in a bowl until it forms a ribbon, add 1 
+        tablespoon of white sugar, and whisk until mixture holds soft peaks. Spoon meringue 
+        into a resealable plastic bag, cut a corner off the bag, and squeeze meringue on top 
+        of cut bars in a decorative pattern. Brown meringue lightly with a kitchen torch.</p>
 </body>
 </html>
