--- a/recipes/choco_chunk_cookie.html
+++ b/recipes/choco_chunk_cookie.html
@@ -11,9 +11,36 @@
     <p>Large or small, these triple chocolate cookies are crispy on the outside and chewy on the inside.
       Refrigerating the batter for 48 hours before baking is ideal, as this allows the dough to fully form its flavor.
       <em>- Josh Graham</em></p>
-
+      
     <h2>Ingredients</h2>
+        <ul>
+            <li>3/4 cup brown sugar</li>
+            <li>1/2 cup unsalted butter</li>
+            <li>1/2 cup white sugar</li>
+            <li>1 teaspoon salt</li>
+            <li>1 large egg</li>
+            <li>1 teaspoon vanilla extract</li>
+            <li>1 1/2 cups all-purpose flour</li>
+            <li>3/4 teaspoon baking soda</li>
+            <li>1 cup milk chocolate chips</li>
+            <li>3 oz dark chocolate, cut into chunks</li>
+            <li>3 tablespoons white chocolate chips</li>
+        </ul>
 
     <h2>Directions</h2>
+        <ol>
+            <li>Combine brown sugar, butter, white sugar, and salt in a large bowl; 
+                beat with an electric mixer until a creamy, deep brown mixture forms. 
+                Add egg and vanilla; beat until mixture lightens and becomes smooth, 10 to 15 seconds.</li>
+            <li>Mix flour and baking soda together in a separate bowl. Add slowly to
+                the wet ingredients until mostly incorporated, but some white traces of flour remain. 
+                Fold in milk chocolate, dark chocolate, and white chocolate using a spatula, not the mixer. 
+                Cover the dough and refrigerate for at least 30 minutes, or up to 48 hours.</li>
+            <li>Preheat the oven to 350 degrees F (175 degrees C) when ready to bake.</li>
+            <li>Divide cold dough into 2 1/4-ounce portions and place on a cookie sheet.</li>
+            <li>Bake in the preheated oven until the edges start to look golden brown and crispy,
+                10 to 12 minutes. Do not overbake; the centers will not look fully done. Cool 
+                until cookies are set, about 30 minutes.</li>
+        </ol>
 </body>
 </html>
