--- a/recipes/rhubarb_crisp.html
+++ b/recipes/rhubarb_crisp.html
@@ -11,7 +11,28 @@
     <p>If you love rhubarb-strawberry mixtures, you'll love this sweet rhubarb crisp. <em>- Karen Martin</em></p>
 
     <h2>Ingredients</h2>
+        <ul>
+            <li>4 cups chopped rhubarb</li>
+            <li>3/4 cup white sugar</li>
+            <li>2 tablespoons quick-cooking tapioca flour</li>
+            <li>1/2 teaspoon salt</li>
+            <li>10 ounces frozen sliced strawberries OR 1 cup fresh sliced strawberries</li>
+            <li>1 cup rolled oats</li>
+            <li>1/3 cup brown sugar</li>
+            <li>1/4 cup sifted all-purpose flour</li>
+            <li>1/4 cup melted butter</li>
+        </ul>
 
     <h2>Directions</h2>
+        <ol>
+            <li>Preheat oven to 350 degrees F (175 degrees C).</li>
+            <li>Mix rhubarb, white sugar, tapioca, and salt in a large bowl and toss to coat; let rest, 
+                stirring occasionally, for 30 minutes.</li>
+            <li>Stir strawberries into the rhubarb mixture; spread into a casserole dish.</li>
+            <li>Stir oats, brown sugar, flour, and butter together in a separate bowl until crumbly; 
+                sprinkle over the fruit mixture in the casserole dish.</li>
+            <li>Bake in preheated oven until set, about 45 minutes.</li>
+        </ol>
+
 </body>
 </html>
