Add Cherry Walnut Bar recipe

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <ul style="list-style: none;">
         <li><a href="recipes/choco_chunk_cookie.html">Triple Chocolate Chunk Cookies</a></li>
         <li><a href="recipes/lemon_bar.html">Lemon Bars</a></li>
+        <li><a href="recipes/cherry_bar.html">Cherry Walnut Bars</a></li>
         <li><a href="recipes/rhubarb_crisp.html">Royal Rhubarb Crisp</a></li>
     </ul>
 
