Add CSS infrastructure

--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles.css">
     <title>Odin Recipes</title>
 </head>
 <body>
     <h1>Odin's Recipes</h1>
-    <ul style="list-style: none;">
+    <ul style="list-style: none;" class="reciLinks">
         <li><a href="recipes/choco_chunk_cookie.html">Triple Chocolate Chunk Cookies</a></li>
         <li><a href="recipes/lemon_bar.html">Lemon Bars</a></li>
         <li><a href="recipes/cherry_bar.html">Cherry Walnut Bars</a></li>
