--- a/recipes/cherry_bar.html
+++ b/recipes/cherry_bar.html
@@ -2,15 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../styles.css">
     <title>Cherry Walnut Bars</title>
 </head>
 <body>
     <h1>Cherry Walnut Bars</h1>
-    <img src="img/cherry_bar.jpg" alt="Photo of Cherry Walnut Bars by Kim's Cooking Now">
+    <img src="img/cherry_bar.jpg" alt="Photo of Cherry Walnut Bars by Kim's Cooking Now" class="reciImg">
     <p>Bars with a shortbread-like base and topped with frosting and coconut. <em>- Anonymous User</em></p>
 
     <h2>Ingredients</h2>
-        <ul>
+        <ul class="reciIngredients">
             <li>2 1/4 cups all-purpose flour</li>
             <li>1/2 cup white sugar</li>
             <li>1 cup softened butter</li>
@@ -27,7 +28,7 @@
         </ul>
 
     <h2>Directions</h2>
-        <ol>
+        <ol class="reciSteps">
             <li>Preheat oven to 350 degrees F (180 degrees C).</li>
             <li>Mix together flour, white sugar and butter or margarine. Mix until crumbly. Press into 
                 a 9 x 13 inch pan. Bake for 20 minutes or until lightly browned.</li>
@@ -36,6 +37,7 @@
             <li>Bake 25 min. Cool.</li>
             <li>Combine 2 tablespoons butter and 1 1/2 cup confectioner's sugar with enough liquid from cherries until spreadable. Frost bars. Sprinkle with coconut when icing is set.</li>
         </ol>
-    
+
+    <p><a href="../index.html">Return to Homepage</a></p>
 </body>
 </html>
