--- a/recipes/choco_chunk_cookie.html
+++ b/recipes/choco_chunk_cookie.html
@@ -2,18 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../styles.css">
     <title>Triple Chocolate Chunk Cookies</title>
 </head>
 <body>
     <h1>Triple Chocolate Chunk Cookies</h1>
     <br> <!-- line break. I want the photo on a new line -->
-    <img src ="img/choco_chunk.jpg" alt="photo of Triple Chocolate Chunk cookies by Yoly">
+    <img src ="img/choco_chunk.jpg" alt="photo of Triple Chocolate Chunk cookies by Yoly" class="reciImg">
     <p>Large or small, these triple chocolate cookies are crispy on the outside and chewy on the inside.
       Refrigerating the batter for 48 hours before baking is ideal, as this allows the dough to fully form its flavor.
       <em>- Josh Graham</em></p>
       
     <h2>Ingredients</h2>
-        <ul>
+        <ul class="reciIngredients">
             <li>3/4 cup brown sugar</li>
             <li>1/2 cup unsalted butter</li>
             <li>1/2 cup white sugar</li>
@@ -28,7 +29,7 @@
         </ul>
 
     <h2>Directions</h2>
-        <ol>
+        <ol class="reciSteps">
             <li>Combine brown sugar, butter, white sugar, and salt in a large bowl; 
                 beat with an electric mixer until a creamy, deep brown mixture forms. 
                 Add egg and vanilla; beat until mixture lightens and becomes smooth, 10 to 15 seconds.</li>
@@ -42,5 +43,7 @@
                 10 to 12 minutes. Do not overbake; the centers will not look fully done. Cool 
                 until cookies are set, about 30 minutes.</li>
         </ol>
+    
+    <p><a href="../index.html">Return to Homepage</a></p>
 </body>
 </html>
