--- a/recipes/lemon_bar.html
+++ b/recipes/lemon_bar.html
@@ -2,19 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../styles.css">
     <title>Lemon Bars</title>
 </head>
 <body>
     <h1>Lemon Bars</h1>
     <br> <!-- line break. I want the photo on a new line -->
-    <img src ="img/lemon_bar.jpg" alt="photo of Lemon Bar by user Nikoo">
+    <img src ="img/lemon_bar.jpg" alt="photo of Lemon Bar by user Nikoo" class="reciImg">
     <p>This is one of my favorite cookies of all time, although technically they're closer to a pie than a cookie. 
     Nothing prepares you for that intense, awesome sweet-tart lemon flavor and custard, perfectly contrasted against 
     that crisp, sweet buttery shortbread cookie. <em>- Chef John, Food Wishes</em></p>
 
     <h2>Ingredients</h2>
     <h4>Shortbread Crust</h4>
-        <ul>
+        <ul class="reciIngredients">
             <li>1 cup all-purpose flour</li>
             <li>1/2 cup unsalted butter, room temperature</li>
             <li>1/4 cup confectioner's sugar</li>
@@ -22,7 +23,7 @@
             <li>1/4 teaspoon salt</li>
         </ul>
     <h4>Lemon Custard</h4>
-        <ul>
+        <ul class="reciIngredients">
             <li>2 large eggs</li>
             <li>1 large egg yolk</li>
             <li>1 cup white sugar</li>
@@ -33,7 +34,7 @@
         </ul>
 
     <h2>Directions</h2>
-        <ol>
+        <ol class="reciSteps">
             <li>Place an oven rack into middle position in oven and preheat oven to 350 degrees F 
                 (175 degrees C). Lightly oil an 8x8-inch baking dish.</li>
             <li>Place 1 cup flour and butter in a mixing bowl and mash with the back of a spatula 
@@ -53,9 +54,10 @@
                 confectioners' sugar.</li>
         </ol>
     <h4>Cook's Note</h4>
-    <p>To add a meringue topping, whisk 1 egg white in a bowl until it forms a ribbon, add 1 
+    <p class="cookNote">To add a meringue topping, whisk 1 egg white in a bowl until it forms a ribbon, add 1 
         tablespoon of white sugar, and whisk until mixture holds soft peaks. Spoon meringue 
         into a resealable plastic bag, cut a corner off the bag, and squeeze meringue on top 
         of cut bars in a decorative pattern. Brown meringue lightly with a kitchen torch.</p>
+    <p><a href="../index.html">Return to Homepage</a></p>
 </body>
 </html>
