--- a/recipes/rhubarb_crisp.html
+++ b/recipes/rhubarb_crisp.html
@@ -2,16 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../styles.css">
     <title>Royal Rhubarb Crisp</title>
 </head>
 <body>
     <h1>Royal Rhubarb Crisp</h1>
     <br> <!-- line break. I want the photo on a new line -->
-    <img src ="img/rhubarb_crisp.jpg" alt="Royal Rhubarb Crisp picture by WestCoastMom">
+    <img src ="img/rhubarb_crisp.jpg" alt="Royal Rhubarb Crisp picture by WestCoastMom" class="reciImg">
     <p>If you love rhubarb-strawberry mixtures, you'll love this sweet rhubarb crisp. <em>- Karen Martin</em></p>
 
     <h2>Ingredients</h2>
-        <ul>
+        <ul class="reciIngredients">
             <li>4 cups chopped rhubarb</li>
             <li>3/4 cup white sugar</li>
             <li>2 tablespoons quick-cooking tapioca flour</li>
@@ -24,7 +25,7 @@
         </ul>
 
     <h2>Directions</h2>
-        <ol>
+        <ol class="reciSteps">
             <li>Preheat oven to 350 degrees F (175 degrees C).</li>
             <li>Mix rhubarb, white sugar, tapioca, and salt in a large bowl and toss to coat; let rest, 
                 stirring occasionally, for 30 minutes.</li>
@@ -33,6 +34,6 @@
                 sprinkle over the fruit mixture in the casserole dish.</li>
             <li>Bake in preheated oven until set, about 45 minutes.</li>
         </ol>
-
+    <p><a href="../index.html">Return to Homepage</a></p>
 </body>
 </html>
